--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-div .show {
+div.showList {
   background-color: #fefae0;;
   align-items: center;
-  margin:5px;
+  margin:4px;
   text-align: center;
   display: block;
   float: left;
@@ -9,8 +9,30 @@ div .show {
   width: 10%;
   height:350px;
 }
-img {
+img.showListImage {
   width: 100%;
+}
+
+div#showDetail{
+  position: fixed; /* Set on top of the page content */
+  width: 60%; /* Full width (cover the whole page) */
+  height: 60%; /* Full height (cover the whole page) */
+  top: 20%;
+  left: 15%;
+  background-color: rgba(0,0,0,0.8); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer;  /* Add a pointer on hover */
+
+  color: white;
+  padding: 0% 5%;
+}
+
+img#showDetailImage {
+  height: 75%;
+  float: left;
+  margin:0 40px 0 0
+
+
 }
 
 
