set UseStates for all text input

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,8 +11,8 @@ nav{
     display: inline-block;
     box-sizing: border-box;
     width: 60px;
-    padding: 5px;
-    margin: 0 6px 6px;
+    padding: 10px 15px;
+    margin: 0 15px;
     text-decoration: none;
     text-align: center;
     font-size: min(10vw, 15px) ;
